// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShippingMethod create/update consignment and change shipping method: dropdown open 1`] = `
<body>
  <div>
    <dt
      class="descriptionTitle"
    >
      <button
        aria-disabled="false"
        class="actionButton"
        id="shipping-method-button"
      >
        Add shipping
      </button>
      <div />
    </dt>
    <dd
      class="descriptionExtraInfo"
    >
      Description Two
    </dd>
    <dd
      class="descriptionValue"
    >
      <div
        class="mr-3"
      >
        <div
          class="container"
        >
          <div
            class="inner"
            style="min-height: 20px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 20px;"
            />
          </div>
        </div>
      </div>
      <span>
        $77.00
      </span>
    </dd>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r1:"
  >
    <div
      class="overlay"
      data-testid="floating-overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper"
        style="left: 0px; position: absolute; top: 0px;"
      >
        <div
          class="wrapper body"
          tabindex="-1"
        >
          <fieldset
            class=""
            name="radio-field-1"
          >
            <div
              class="option"
            >
              <label
                class="ui-label-label-3864 label"
                for="available-shipping-option-1"
              >
                <input
                  class="input"
                  id="available-shipping-option-1"
                  name="radio-field-1"
                  type="radio"
                />
                <div
                  class="radioLabel"
                >
                  <span>
                    Description One
                  </span>
                  <span
                    class="radioLabelCaption"
                  >
                    <span>
                      $55.00
                    </span>
                  </span>
                </div>
              </label>
            </div>
            <div
              class="option"
            >
              <label
                class="ui-label-label-3864 label"
                for="available-shipping-option-2"
              >
                <input
                  class="input"
                  id="available-shipping-option-2"
                  name="radio-field-1"
                  type="radio"
                />
                <div
                  class="radioLabel"
                >
                  <span>
                    Description Two
                  </span>
                  <span
                    class="radioLabelCaption"
                  >
                    <span>
                      $66.00
                    </span>
                  </span>
                </div>
              </label>
            </div>
          </fieldset>
        </div>
        <div
          class="footer"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
            type="button"
          >
            <span
              class="ui-button-content-a432"
            >
              Close
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
            type="button"
          >
            <span
              class="ui-button-content-a432"
            >
              Apply
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ShippingMethod create/update consignment and change shipping method: initial 1`] = `
<body>
  <div>
    <dt
      class="descriptionTitle"
    >
      <button
        aria-disabled="true"
        class="actionButton isDisabled"
        id="shipping-method-button"
      >
        Add shipping
      </button>
      <div>
        Your cart contains no products, please select some first.
      </div>
    </dt>
    <dd
      class="descriptionExtraInfo isDisabled"
    >
      ⎯
    </dd>
    <dd
      class="descriptionValue descriptionValueDisabled"
    >
      <span>
        $77.00
      </span>
    </dd>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r1:"
  />
</body>
`;

exports[`ShippingMethod create/update consignment and change shipping method: shipping method selected 1`] = `
<body>
  <div>
    <dt
      class="descriptionTitle"
    >
      <button
        aria-disabled="false"
        class="actionButton"
        id="shipping-method-button"
      >
        Add shipping
      </button>
      <div />
    </dt>
    <dd
      class="descriptionExtraInfo"
    >
      Description Two
    </dd>
    <dd
      class="descriptionValue"
    >
      <span>
        $77.00
      </span>
    </dd>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r1:"
  />
</body>
`;
